<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RefillMedActivity" >

    <TextView
        android:id="@+id/instructionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/refill_med_instructions"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/dateFilledText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/dosageView"
        android:ems="10"
        android:hint="@string/new_date_filled_hint"
        android:inputType="date" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/durationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dateFilledText"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/dateFilledText"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/new_duration_hint" />

    <CheckBox
        android:id="@+id/reminderCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/durationText"
        android:layout_below="@+id/durationText"
        android:text="@string/reminder_checkbox"
        android:onClick="reminderCheckboxClicked" />

    <EditText
        android:id="@+id/reminderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/reminderCheckBox"
        android:layout_toRightOf="@+id/reminderCheckBox"
        android:ems="10"
        android:inputType=""
        android:hint="@string/hint_reminder"
        android:enabled="false"
        android:focusable="false"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/nameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/instructionView"
        android:layout_marginTop="20dp"
        android:freezesText="true"
        android:text="@string/details_default"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/dosageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nameView"
        android:layout_below="@+id/nameView"
        android:freezesText="true"
        android:text="@string/details_default"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/refillButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reminderText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:onClick="refillMed"
        android:text="@string/button_refill" />

</RelativeLayout>
